# navicore-music

./: .gitignore  ADD-DNS.md  API.md  ARCHITECTURE.md  AUTH_STATUS_BROKEN.md  CLOUDFLARE-AUTH.md  Cargo.toml  DEPLOY-STEPS.md  DEPLOYMENT.md  DNS-SETUP.md  Dockerfile  Makefile  NAVIGATION.md  QUICKSTART.md  README.md  RESPONSIVE_DESIGN.md  SECURITY.md  SESSION_ARCHITECTURE.md  SETUP_GITHUB_SECRETS.md  UPLOAD-SPEC.md  _headers  add-custom-domain.md  build-pages.sh  build-worker.sh  clippy.toml  debug-auth.html  debug-database.sql  deploy-navicore-tech.sh  package-lock.json  package.json  rustfmt.toml  schema-add-superadmin.sql  schema-auth-migration.sql  schema-auth-traditional.sql  schema-auth-v2.sql  schema-complete.sql  schema-nosql.sql  schema-relational.sql  schema-v1.sql  schema-v2.sql  (+8 more)
.cargo/: config.toml
.github/workflows/: ci.yml  database-management.yml  database-operations.yml  database-wipe.yml  debug-database.yml  deploy.yml  fresh-install.yml
backend/: .env.example  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/db/: mod.rs  models.rs  queries.rs
backend/src/handlers/: auth.rs  mod.rs  playlists.rs  stream.rs  tracks.rs
backend/src/storage/: mod.rs
backend/templates/: base.html  mobile_player.html  track_grid.html
frontend/: Cargo.toml
frontend/src/: lib.rs
migrations/: 001_initial_schema.sql  002_add_albums_and_metadata.sql  003_normalize_tags.sql
scripts/: fresh-install.sh
shared/: Cargo.toml
shared/src/: models.rs
worker/: Cargo.toml  wrangler.toml
worker/src/: lib.rs
