[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Navicore"]
license = "MIT"
description = "Personal music streaming service"
repository = "https://github.com/navicore/navicore-music"
readme = "README.md"
keywords = ["music", "streaming", "rust", "wasm"]
categories = ["multimedia::audio", "web-programming"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"

# Backend dependencies
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono", "macros"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.0"
argon2 = "0.5"

# Frontend dependencies
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo = "0.11"
wasm-bindgen-futures = "0.4"