[package]
name = "navicore-music-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local dependencies
navicore-music-shared = { path = "../shared" }

# Workspace dependencies
yew = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"